flicker finally fixed with useLayoutEffect - fixed logic where inventory items could be added more than once

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,15 @@ body {
   margin: 0 auto;
   margin-bottom: 3rem;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; }
+  .levelDetails > div:first-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem; }
+    @media (min-width: 500px) {
+      .levelDetails > div:first-child {
+        flex-direction: row; } }
 
 .adventureText,
 .adventureResponse {
