--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -70,6 +70,16 @@ body {
 	margin-bottom: 3rem;
 	box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
 		rgba(0, 0, 0, 0.22) 0px 15px 12px;
+	> div:first-child {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 2rem;
+		@media (min-width: 500px) {
+			flex-direction: row;
+		}
+	}
 }
 .adventureText,
 .adventureResponse {
